; ModuleID = '/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/shitlisp/extr_sl-cifra.c_pbkdf2_fn.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/picotls/deps/cifra/shitlisp/extr_sl-cifra.c_pbkdf2_fn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { %struct.TYPE_17__ }
%struct.TYPE_17__ = type { %struct.TYPE_16__ }
%struct.TYPE_16__ = type { %struct.TYPE_15__ }
%struct.TYPE_15__ = type { i32* }

@sl_preprocess_eval = common dso_local global i32 0, align 4
@sl_assert_bytes = common dso_local global i32 0, align 4
@sl_assert_integer = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_18__* (%struct.TYPE_18__*, %struct.TYPE_18__*, i32*, i32*)* @pbkdf2_fn to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_18__* @pbkdf2_fn(%struct.TYPE_18__* %0, %struct.TYPE_18__* %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_18__*, align 8
  %6 = alloca %struct.TYPE_18__*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_18__*, align 8
  %11 = alloca %struct.TYPE_18__*, align 8
  %12 = alloca %struct.TYPE_18__*, align 8
  %13 = alloca %struct.TYPE_18__*, align 8
  %14 = alloca %struct.TYPE_18__*, align 8
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %5, align 8
  store %struct.TYPE_18__* %1, %struct.TYPE_18__** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %15 = load %struct.TYPE_18__*, %struct.TYPE_18__** %6, align 8
  %16 = call i32 @sl_iter_start(%struct.TYPE_18__* %15)
  store i32 %16, i32* %9, align 4
  %17 = load i32, i32* @sl_preprocess_eval, align 4
  %18 = load i32, i32* @sl_assert_bytes, align 4
  %19 = load i32*, i32** %7, align 8
  %20 = call %struct.TYPE_18__* @sl_iter_convert(i32* %9, i32 %17, i32 %18, i32* %19)
  store %struct.TYPE_18__* %20, %struct.TYPE_18__** %10, align 8
  %21 = load i32, i32* @sl_preprocess_eval, align 4
  %22 = load i32, i32* @sl_assert_bytes, align 4
  %23 = load i32*, i32** %7, align 8
  %24 = call %struct.TYPE_18__* @sl_iter_convert(i32* %9, i32 %21, i32 %22, i32* %23)
  store %struct.TYPE_18__* %24, %struct.TYPE_18__** %11, align 8
  %25 = load i32, i32* @sl_preprocess_eval, align 4
  %26 = load i32, i32* @sl_assert_integer, align 4
  %27 = load i32*, i32** %7, align 8
  %28 = call %struct.TYPE_18__* @sl_iter_convert(i32* %9, i32 %25, i32 %26, i32* %27)
  store %struct.TYPE_18__* %28, %struct.TYPE_18__** %12, align 8
  %29 = load i32, i32* @sl_preprocess_eval, align 4
  %30 = load i32, i32* @sl_assert_integer, align 4
  %31 = load i32*, i32** %7, align 8
  %32 = call %struct.TYPE_18__* @sl_iter_convert(i32* %9, i32 %29, i32 %30, i32* %31)
  store %struct.TYPE_18__* %32, %struct.TYPE_18__** %13, align 8
  %33 = load %struct.TYPE_18__*, %struct.TYPE_18__** %10, align 8
  %34 = icmp ne %struct.TYPE_18__* %33, null
  br i1 %34, label %35, label %44

35:                                               ; preds = %4
  %36 = load %struct.TYPE_18__*, %struct.TYPE_18__** %11, align 8
  %37 = icmp ne %struct.TYPE_18__* %36, null
  br i1 %37, label %38, label %44

38:                                               ; preds = %35
  %39 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %40 = icmp ne %struct.TYPE_18__* %39, null
  br i1 %40, label %41, label %44

41:                                               ; preds = %38
  %42 = load %struct.TYPE_18__*, %struct.TYPE_18__** %13, align 8
  %43 = icmp ne %struct.TYPE_18__* %42, null
  br i1 %43, label %46, label %44

44:                                               ; preds = %41, %38, %35, %4
  %45 = call %struct.TYPE_18__* (...) @sl_get_nil()
  store %struct.TYPE_18__* %45, %struct.TYPE_18__** %14, align 8
  br label %83

46:                                               ; preds = %41
  %47 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %48 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %47, i32 0, i32 0
  %49 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %49, i32 0, i32 0
  %51 = call i32 @bignum_len_words(%struct.TYPE_15__* %50)
  %52 = icmp eq i32 %51, 1
  %53 = zext i1 %52 to i32
  %54 = call i32 @assert(i32 %53)
  %55 = load %struct.TYPE_18__*, %struct.TYPE_18__** %13, align 8
  %56 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %55, i32 0, i32 0
  %57 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %56, i32 0, i32 0
  %58 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %57, i32 0, i32 0
  %59 = call i32 @bignum_len_words(%struct.TYPE_15__* %58)
  %60 = icmp eq i32 %59, 1
  %61 = zext i1 %60 to i32
  %62 = call i32 @assert(i32 %61)
  %63 = load i32*, i32** %8, align 8
  %64 = load %struct.TYPE_18__*, %struct.TYPE_18__** %10, align 8
  %65 = load %struct.TYPE_18__*, %struct.TYPE_18__** %11, align 8
  %66 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %67 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %66, i32 0, i32 0
  %68 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %67, i32 0, i32 0
  %69 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %68, i32 0, i32 0
  %70 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %69, i32 0, i32 0
  %71 = load i32*, i32** %70, align 8
  %72 = getelementptr inbounds i32, i32* %71, i64 0
  %73 = load i32, i32* %72, align 4
  %74 = load %struct.TYPE_18__*, %struct.TYPE_18__** %13, align 8
  %75 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %74, i32 0, i32 0
  %76 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %75, i32 0, i32 0
  %77 = getelementptr inbounds %struct.TYPE_16__, %struct.TYPE_16__* %76, i32 0, i32 0
  %78 = getelementptr inbounds %struct.TYPE_15__, %struct.TYPE_15__* %77, i32 0, i32 0
  %79 = load i32*, i32** %78, align 8
  %80 = getelementptr inbounds i32, i32* %79, i64 0
  %81 = load i32, i32* %80, align 4
  %82 = call %struct.TYPE_18__* @do_pbkdf2(i32* %63, %struct.TYPE_18__* %64, %struct.TYPE_18__* %65, i32 %73, i32 %81)
  store %struct.TYPE_18__* %82, %struct.TYPE_18__** %14, align 8
  br label %83

83:                                               ; preds = %46, %44
  %84 = load %struct.TYPE_18__*, %struct.TYPE_18__** %10, align 8
  %85 = call i32 @sl_decref(%struct.TYPE_18__* %84)
  %86 = load %struct.TYPE_18__*, %struct.TYPE_18__** %11, align 8
  %87 = call i32 @sl_decref(%struct.TYPE_18__* %86)
  %88 = load %struct.TYPE_18__*, %struct.TYPE_18__** %12, align 8
  %89 = call i32 @sl_decref(%struct.TYPE_18__* %88)
  %90 = load %struct.TYPE_18__*, %struct.TYPE_18__** %13, align 8
  %91 = call i32 @sl_decref(%struct.TYPE_18__* %90)
  %92 = load %struct.TYPE_18__*, %struct.TYPE_18__** %14, align 8
  ret %struct.TYPE_18__* %92
}

declare dso_local i32 @sl_iter_start(%struct.TYPE_18__*) #1

declare dso_local %struct.TYPE_18__* @sl_iter_convert(i32*, i32, i32, i32*) #1

declare dso_local %struct.TYPE_18__* @sl_get_nil(...) #1

declare dso_local i32 @assert(i32) #1

declare dso_local i32 @bignum_len_words(%struct.TYPE_15__*) #1

declare dso_local %struct.TYPE_18__* @do_pbkdf2(i32*, %struct.TYPE_18__*, %struct.TYPE_18__*, i32, i32) #1

declare dso_local i32 @sl_decref(%struct.TYPE_18__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
